--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
-My Github Webpage</br>
-<a href="/aLogMyNight">LogMyNight</a>
+---
+layout: default
+title: Michael Greifender
+---
+
+{% for post in site.posts limit:5 %}
+<h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+{{ post.content }}
+<em>Posted on {{ post.date | date_to_long_string }}.</em>
+{% endfor %}
