--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@ layout: page
 title: About
 ---
 
-<img src="/images/mikegr.png" align="left" style="margin-right:30px; margin-top:7px;">
+<img src="/images/mike_gross.jpg" align="left" style="margin-right:30px; margin-top:7px;">
 Something about me 
 
 <h2>The Site</h2>
