--- a/links/index.html
+++ b/links/index.html
@@ -3,8 +3,8 @@ layout: page
 title: Links
 ---
 <ul>
-<li class="first"><a href="http://first.com/news/blog">Bean Dip Clothing Design</a></li>
-<li><a href="http://www.second.com/">Interactive Cognition</a></li>
-<li><a href="http://third.com/">Nick Dominguez</a></li>
-<li class="last"><a href="http://lastone.com/portfolio/">Porter McKnight</a></li>
+<li class="first"><a href="http://first.com/news/blog">Link1</a></li>
+<li><a href="http://www.second.com/">Link2</a></li>
+<li><a href="http://third.com/">Link3</a></li>
+<li class="last"><a href="http://lastone.com/portfolio/">Link4</a></li>
 </ul>
