post about android

--- a/index.html
+++ b/index.html
@@ -36,3 +36,6 @@ title: Home
   
   <div class='clear'></div>
 </div>
+
+
+<link type="text/css" rel="stylesheet" media="all" href="css/print.css" />
