--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 <head>
     <title>GG TEST PAGE</title>
+    <meta name="color-scheme" content="light dark">
+    <meta name="supported-color-schemes" content="light dark">
 
     <script>
         function askIsSoftwareTokenInstalled() {
