--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         @media (prefers-color-scheme: dark ) {
 
             body {
-                color: white!important;;
+                color: white!important;
+                background-color: black;
             }
 
         }
@@ -29,6 +30,7 @@
         @media (prefers-color-scheme: light ) {
             body {
                 color: black !important;
+                background-color: white;
             }
 
         }
